js/src/tests/test262/language/import/import-defer/errors/syntax-error/import-defer-of-syntax-error-fails.js
DONOTEVALUATE
(
)
;
import
defer
*
as
ns
from
"
.
/
syntax
-
error_FIXTURE
.
js
"
;
